--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Nadiia Shepel</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./app/css/style.css">
 </head>
 <body>
 
   <header class="header">
     <a href="https://binary-studio.com/" target="_blank" class="header__logo-link">
-      <img class="header__logo" src="../assets/logo.svg" alt="Binary logo">
+      <img class="header__logo" src="./assets/logo.svg" alt="Binary logo">
     </a>
     
     <div class="header__right-block">
-      <img class="header__notification" src="../assets/icons/bell-solid.svg" alt="Notification icon">
+      <img class="header__notification" src="./assets/icons/bell-solid.svg" alt="Notification icon">
 
       <div class="profile">
         <div class="profile__icon">Н</div>
@@ -34,7 +34,7 @@
   <main class="main">
       <p class="error-message">
         The page were looking for doesn't exist
-        <img class="error-message__icon" src="../assets/icons/sad-cry-regular.svg" alt="Binary logo">
+        <img class="error-message__icon" src="./assets/icons/sad-cry-regular.svg" alt="Binary logo">
       </p>
       <div class="element-404">
         <span><span>4</span></span>
@@ -45,14 +45,14 @@
 
   <div class="app-notifications">
     <div class="app-notifications__item app-notifications__item--success">
-      <img class="app-notifications__item-icon" src="../assets/icons/check-circle-solid.svg" alt="Success notification icon">
+      <img class="app-notifications__item-icon" src="./assets/icons/check-circle-solid.svg" alt="Success notification icon">
       <div>
         <p class="app-notifications__item-title">Success</p>
         <p class="app-notifications__item-message">Profile was updated.</p>
       </div>
     </div>
     <div class="app-notifications__item app-notifications__item--error">
-      <img class="app-notifications__item-icon" src="../assets/icons/exclamation-circle-solid.svg" alt="Error notification icon">
+      <img class="app-notifications__item-icon" src="./assets/icons/exclamation-circle-solid.svg" alt="Error notification icon">
       <div>
         <p class="app-notifications__item-title">Error</p>
         <p class="app-notifications__item-message">Something went wrong. Please try again later.</p>
